--- a/index.html
+++ b/index.html
@@ -1,148 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="icon"
-      href="https://www.freepnglogos.com/uploads/netflix-logo-app-png-16.png"
-    />
-    <link rel="stylesheet" href="./style.css" />
-    <title>Netflix</title>
-  </head>
-  <body>
-    <div class="page">
-      <nav>
-        <div class="img">
-          <img
-            id="logo"
-            src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/08/Netflix_2015_logo.svg/170px-Netflix_2015_logo.svg.png"
-            alt=""
-          />
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" href="https://www.freepnglogos.com/uploads/netflix-logo-app-png-16.png" />
+  <link rel="stylesheet" href="./style.css" />
+  <title>Netflix</title>
+</head>
+
+<body>
+  <div class="page">
+    <nav>
+      <div class="img">
+        <img id="logo"
+          src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/08/Netflix_2015_logo.svg/170px-Netflix_2015_logo.svg.png"
+          alt="" />
+      </div>
+      <div class="headerright">
+        <div class="options">
+          <select name="languages" class="lang">
+            <option value="English" class="option">English</option>
+            <option value="Hindi" class="option">Hindi</option>
+          </select>
         </div>
-        <div class="headerright">
-          <div class="options">
-            <select name="languages" class="lang">
-              <option value="English" class="option">English</option>
-              <option value="Hindi" class="option">Hindi</option>
-            </select>
-          </div>
-          <button type="submit" class="btn">Sign In</button>
-        </div>
-      </nav>
-      <div class="firstpage">
-          <div class="wrapper">
-              <h1 class="firstline">Unlimited movies, TV shows and more.</h1>
-              <h2 class="secondline">Watch anywhere. Cancel anytime.</h2>
-              <h3 class="thirdline">
-                Ready to watch? Enter your email to create or restart your membership.
-              </h3>
-            </div>
-              <div class="email">
-                <input type="email" placeholder="Email address" class="emailbox" />
-                <button type="submit">Get Started ></button>
-              </div>
+        <button type="submit" class="btn">Sign In</button>
+      </div>
+    </nav>
+    <div class="firstpage">
+      <div class="wrapper">
+        <h1 class="firstline">Unlimited movies, TV
+          shows and more.</h1>
+        <h2 class="secondline">Watch anywhere. Cancel anytime.</h2>
+        <h3 class="thirdline">
+          Ready to watch? Enter your email to create or restart your membership.
+        </h3></div>
+      <div class="email">
+        <input type="email" placeholder="Email address" class="emailbox" />
+        <button type="submit" class="getstarted">Get Started ></button>
       </div>
     </div>
-    <div class="secondpage">
-      <div class="windowtext">
-        <h1 class="firstline">Enjoy on your TV.</h1>
-        <h2 class="secondline">
-          Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray
-          players and more.
-        </h2>
-      </div>
-      <img
-        src="https://media.discordapp.net/attachments/838778074262143026/982365916815818852/tv.png"
-        alt=""
-      />
     </div>
-    <div class="thirdpage">
-      <img
-        src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/mobile-0819.jpg"
-        alt=""
-      />
-      <div class="windowtext">
-        <h1 class="firstline">Download your shows to watch offline.</h1>
-        <h2 class="secondline">
-          Save your favourites easily and always have something to watch.
-        </h2>
+  </div>
+  <div class="secondpage">
+    <div class="windowtext">
+      <h1 class="pagefirstline">Enjoy on your TV.</h1>
+      <h2 class="pagesecondline">
+        Watch on smart TVs, PlayStation, Xbox, 
+        Chromecast, Apple TV, Blu-ray
+        players and more.
+      </h2>
+    </div>
+    <img src="https://media.discordapp.net/attachments/838778074262143026/982365916815818852/tv.png" alt="" />
+  </div>
+  <div class="thirdpage">
+    <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/mobile-0819.jpg" alt="" />
+    <div class="windowtext">
+      <h1 class="`pagefirstline">Download your shows to watch offline.</h1>
+      <h2 class="`pagesecondline">
+        Save your favourites easily and always have something to watch.
+      </h2>
+    </div>
+  </div>
+  <div class="fourthpage">
+    <div class="windowtext">
+      <h1 class="pagefirstline">Watch everywhere.</h1>
+      <h2 class="pagesecondline">
+        Stream unlimited movies and TV shows on your phone, tablet, laptop,
+        and TV.
+      </h2>
+    </div>
+    <img src="https://cdn.discordapp.com/attachments/838778074262143026/982366637133013012/unknown_3.png" alt="" />
+  </div>
+  <div class="fifthpage">
+    <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/cards/kidsValueProp.png" alt="" />
+    <div class="windowtext">
+      <h1 class="pagefirstline">Create profiles for children.</h1>
+      <h2 class="pagesecondline">
+        Send children on adventures with their favourite characters in a space
+        made just for them—free with your membership.
+      </h2>
+    </div>
+  </div>
+  <div class="faq">
+    <h1 class="faqtext">Frequently Asked Questions</h1>
+    <div class="questions">What is Netflix?</div>
+    <div class="questions">How much does Netflix cost?</div>
+    <div class="questions">Where can I watch?</div>
+    <div class="questions">How do I cancel?</div>
+    <div class="questions">What can I watch on Netflix?</div>
+    <div class="questions">Is Netflix good for kids?</div>
+    <h3 class="thirdline">
+      Ready to watch? Enter your email to create or restart your membership.
+    </h3>
+    <input type="email" placeholder="Email address" class="emailbox" />
+    <button type="submit">Get Started ></button>
+  </div>
+  <footer>
+    Questions? Call 000-800-040-1843
+    <div class="links">
+      <div class="1stbox">
+        <a href="#" class="link">FAQ</a>
+        <a href="#" class="link">Account</a>
+        <a href="#" class="link">Investor Relations</a>
+        <a href="#" class="link">Ways to Watch</a>
+      </div>
+      <div class="2ndbox">
+        <a href="#" class="link">Privacy</a>
+        <a href="#" class="link">Corporate Information</a>
+        <a href="#" class="link">Speed Test</a>
+        <a href="#" class="link">Only on Netflix</a>
+      </div>
+      <div class="3rdbox">
+        <a href="#" class="link">Help Centre</a>
+        <a href="#" class="link">Media Centre</a>
+        <a href="#" class="link">Jobs</a>
+        <a href="#" class="link">Terms of Use</a>
+      </div>
+      <div class="4thbox">
+        <a href="#" class="link">Cookie Preferences</a>
+        <a href="#" class="link">Contact Us</a>
+        <a href="#" class="link">Legal Notices</a>
+        <a href="#" class="link">Only on Netflix</a>
       </div>
     </div>
-    <div class="fourthpage">
-      <div class="windowtext">
-        <h1 class="firstline">Watch everywhere.</h1>
-        <h2 class="secondline">
-          Stream unlimited movies and TV shows on your phone, tablet, laptop,
-          and TV.
-        </h2>
-      </div>
-      <img
-        src="https://cdn.discordapp.com/attachments/838778074262143026/982366637133013012/unknown_3.png"
-        alt=""
-      />
-    </div>
-    <div class="thirdpage">
-      <img
-        src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/cards/kidsValueProp.png"
-        alt=""
-      />
-      <div class="windowtext">
-        <h1 class="firstline">Create profiles for children.</h1>
-        <h2 class="secondline">
-          Send children on adventures with their favourite characters in a space
-          made just for them—free with your membership.
-        </h2>
-      </div>
-    </div>
-    <div class="faq">
-      <h1 class="faqtext">Frequently Asked Questions</h1>
-      <div class="questions">What is Netflix?</div>
-      <div class="questions">How much does Netflix cost?</div>
-      <div class="questions">Where can I watch?</div>
-      <div class="questions">How do I cancel?</div>
-      <div class="questions">What can I watch on Netflix?</div>
-      <div class="questions">Is Netflix good for kids?</div>
-      <h3 class="thirdline">
-        Ready to watch? Enter your email to create or restart your membership.
-      </h3>
-      <input type="email" placeholder="Email address" class="emailbox" />
-      <button type="submit">Get Started ></button>
-    </div>
-    <footer>
-      Questions? Call 000-800-040-1843
-      <div class="links">
-        <div class="1stbox">
-          <a href="#" class="link">FAQ</a>
-          <a href="#" class="link">Account</a>
-          <a href="#" class="link">Investor Relations</a>
-          <a href="#" class="link">Ways to Watch</a>
-        </div>
-        <div class="2ndbox">
-          <a href="#" class="link">Privacy</a>
-          <a href="#" class="link">Corporate Information</a>
-          <a href="#" class="link">Speed Test</a>
-          <a href="#" class="link">Only on Netflix</a>
-        </div>
-        <div class="3rdbox">
-          <a href="#" class="link">Help Centre</a>
-          <a href="#" class="link">Media Centre</a>
-          <a href="#" class="link">Jobs</a>
-          <a href="#" class="link">Terms of Use</a>
-        </div>
-        <div class="4thbox">
-          <a href="#" class="link">Cookie Preferences</a>
-          <a href="#" class="link">Contact Us</a>
-          <a href="#" class="link">Legal Notices</a>
-          <a href="#" class="link">Only on Netflix</a>
-        </div>
-      </div>
-      <select name="languages" id="lang">
-        <option value="English">English</option>
-        <option value="Hindi">Hindi</option>
-      </select>
-      netlix India
-    </footer>
-  </body>
+    <select name="languages" id="lang">
+      <option value="English">English</option>
+      <option value="Hindi">Hindi</option>
+    </select>
+    netlix India
+  </footer>
+</body>
+
 </html>
