--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
   <div class="thirdpage">
     <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/mobile-0819.jpg" alt="" />
     <div class="windowtext">
-      <h1 class="`pagefirstline">Download your shows to watch offline.</h1>
-      <h2 class="`pagesecondline">
+      <h1 class="pagefirstline">Download your shows to watch offline.</h1>
+      <h2 class="pagesecondline">
         Save your favourites easily and always have something to watch.
       </h2>
     </div>
