--- a/index.html
+++ b/index.html
@@ -35,19 +35,20 @@
         <h2 class="secondline">Watch anywhere. Cancel anytime.</h2>
         <h3 class="thirdline">
           Ready to watch? Enter your email to create or restart your membership.
-        </h3></div>
+        </h3>
+      </div>
       <div class="email">
         <input type="email" placeholder="Email address" class="emailbox" />
         <button type="submit" class="getstarted">Get Started ></button>
       </div>
     </div>
-    </div>
+  </div>
   </div>
   <div class="secondpage">
     <div class="windowtext">
       <h1 class="pagefirstline">Enjoy on your TV.</h1>
       <h2 class="pagesecondline">
-        Watch on smart TVs, PlayStation, Xbox, 
+        Watch on smart TVs, PlayStation, Xbox,
         Chromecast, Apple TV, Blu-ray
         players and more.
       </h2>
@@ -85,51 +86,66 @@
   </div>
   <div class="faq">
     <h1 class="faqtext">Frequently Asked Questions</h1>
-    <div class="questions">What is Netflix?</div>
-    <div class="questions">How much does Netflix cost?</div>
-    <div class="questions">Where can I watch?</div>
-    <div class="questions">How do I cancel?</div>
-    <div class="questions">What can I watch on Netflix?</div>
-    <div class="questions">Is Netflix good for kids?</div>
-    <h3 class="thirdline">
+    <div class="parent">
+      <div class="childques">What is Netflix?</div><div class="childplus">+</div>
+    </div>
+    <div class="parent">
+      <div class="childques">How much does Netflix cost?</div><div class="childplus">+</div>
+    </div>
+    <div class="parent">
+      <div class="childques">Where can I watch?</div><div class="childplus">+</div>
+    </div>
+    <div class="parent">
+      <div class="childques">How do I cancel?</div><div class="childplus">+</div>
+    </div>
+    <div class="parent">
+      <div class="childques">What can I watch on Netflix?</div><div class="childplus">+</div>
+    </div>
+    <div class="parent">
+      <div class="childques">Is Netflix good for kids?</div><div class="childplus">+</div>
+    </div>
+    <h3 class="thirdlinebottom">
       Ready to watch? Enter your email to create or restart your membership.
     </h3>
-    <input type="email" placeholder="Email address" class="emailbox" />
-    <button type="submit">Get Started ></button>
+    <div class="email">
+      <input type="email" placeholder="Email address" class="emailbox" />
+      <button type="submit" class="getstarted">Get Started ></button>
+    </div>
   </div>
   <footer>
-    Questions? Call 000-800-040-1843
+    <div class="contactparent"><div class="contactchild">Questions? Call 000-800-040-1843</div></div> 
     <div class="links">
-      <div class="1stbox">
+      <div class="firstbox">
         <a href="#" class="link">FAQ</a>
         <a href="#" class="link">Account</a>
         <a href="#" class="link">Investor Relations</a>
         <a href="#" class="link">Ways to Watch</a>
       </div>
-      <div class="2ndbox">
+      <div class="secondbox">
         <a href="#" class="link">Privacy</a>
         <a href="#" class="link">Corporate Information</a>
         <a href="#" class="link">Speed Test</a>
         <a href="#" class="link">Only on Netflix</a>
       </div>
-      <div class="3rdbox">
+      <div class="thirdbox">
         <a href="#" class="link">Help Centre</a>
         <a href="#" class="link">Media Centre</a>
         <a href="#" class="link">Jobs</a>
         <a href="#" class="link">Terms of Use</a>
       </div>
-      <div class="4thbox">
+      <div class="fourthbox">
         <a href="#" class="link">Cookie Preferences</a>
         <a href="#" class="link">Contact Us</a>
         <a href="#" class="link">Legal Notices</a>
         <a href="#" class="link">Only on Netflix</a>
       </div>
     </div>
-    <select name="languages" id="lang">
+    <div class="bottomoption">
+    <select name="languages" class="lang">
       <option value="English">English</option>
       <option value="Hindi">Hindi</option>
-    </select>
-    netlix India
+    </select></div>
+    <div class="bottomtextparent"><div class="bottomtextchild">Netlix India</div></div>  
   </footer>
 </body>
 
