--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
     </div>
     <div class="bottomoption">
     <select name="languages" class="lang">
-      <option value="English">English</option>
-      <option value="Hindi">Hindi</option>
+      <option value="English" class="option">English</option>
+      <option value="Hindi"   class="option">Hindi</option>
     </select></div>
     <div class="bottomtextparent"><div class="bottomtextchild">Netlix India</div></div>  
   </footer>
