--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" href="https://www.freepnglogos.com/uploads/netflix-logo-app-png-16.png" />
-  <link rel="stylesheet" href="./style.css" />
+  <link rel="stylesheet" href=".//style.css" />
   <title>Netflix</title>
 </head>
 
